@@ -239,6 +239,16 @@ verilog/parser_bugs.v:243: SIGNAL_DECL  'wire' 'b' '' '' '' ''
 verilog/parser_bugs.v:243: SIGNAL_DECL  'wire' 'c' '' '' '' ''
 verilog/parser_bugs.v:243: SIGNAL_DECL  'wire' 'd' '' '' '' ''
 verilog/parser_bugs.v:248: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:250: MODULE  'module' 'bug34649' undef '0'
+verilog/parser_bugs.v:250: PORT  'name'
+verilog/parser_bugs.v:251: SIGNAL_DECL  'output' 'name' '' '' '' ''
+verilog/parser_bugs.v:251: SIGNAL_DECL  'reg' 'name' '' '' '' '0'
+verilog/parser_bugs.v:252: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:253: MODULE  'module' 'bug34649b' undef '0'
+verilog/parser_bugs.v:254: SIGNAL_DECL  'output' 'name' '' '' '' ''
+verilog/parser_bugs.v:254: SIGNAL_DECL  'reg' 'name' '' '' '' ''
+verilog/parser_bugs.v:254: PORT  'name'
+verilog/parser_bugs.v:256: ENDMODULE  'endmodule'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
 verilog/pinorder.v:007: SIGNAL_DECL  'wire' 'b_i' '' '' '' ''
 verilog/pinorder.v:008: SIGNAL_DECL  'wire' 'd_o' '' '' '' ''
